--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "inertiajs/inertia-laravel": "^1.0",
         "laravel/framework": "^11.0",
         "laravel/sanctum": "^4.0",
+        "laravel/socialite": "*",
         "laravel/tinker": "^2.9",
         "tightenco/ziggy": "^2.0"
     },
