--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
         "autoprefixer": "^10.4.19",
         "axios": "^1.7.2",
         "laravel-vite-plugin": "^1.0",
-        "postcss": "^8.4.38",
+        "postcss-cli": "^11.0.0",
         "tailwindcss": "^3.4.3",
         "vite": "^5.0",
         "vue": "^3.4.0"
